[package]
name = "totr"
version = "0.1.0"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
observability_deps = { path = "/Users/mkm/Projects/w/iox/observability_deps" }