[package]
name = "observability_deps"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"
description = "Observability ecosystem dependencies for InfluxDB IOx, to ensure consistent versions and unified updates"

[dependencies] # In alphabetical order
# env_logger = "0.8.3"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = ["parking_lot"] }
